[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/controls/centered_in_full_screen_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/controls/nav_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/controls/screens/pause_screen.gd" type="Script" id=3]

[node name="PauseScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="CenteredInFullScreenPanel" parent="." instance=ExtResource( 1 )]
margin_right = 480.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenteredInFullScreenPanel"]
margin_right = 480.0
margin_bottom = 480.0

[node name="NavBar" parent="CenteredInFullScreenPanel/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 64.0
text = "Paused"

[node name="Spacer1" type="Control" parent="CenteredInFullScreenPanel/VBoxContainer"]
margin_left = 240.0
margin_top = 68.0
margin_right = 240.0
margin_bottom = 136.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Stats" type="VBoxContainer" parent="CenteredInFullScreenPanel/VBoxContainer"]
margin_left = 140.0
margin_top = 140.0
margin_right = 340.0
margin_bottom = 140.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 4

[node name="Spacer2" type="Control" parent="CenteredInFullScreenPanel/VBoxContainer"]
margin_left = 240.0
margin_top = 144.0
margin_right = 240.0
margin_bottom = 212.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenteredInFullScreenPanel/VBoxContainer"]
margin_left = 170.0
margin_top = 216.0
margin_right = 310.0
margin_bottom = 408.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 12

[node name="SettingsButton" type="Button" parent="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 39.0
text = "Settings"

[node name="ExitLevelButton" type="Button" parent="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 140.0
margin_bottom = 90.0
text = "Exit level"

[node name="RestartButton" type="Button" parent="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 140.0
margin_bottom = 141.0
text = "Restart"

[node name="ResumeButton" type="Button" parent="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer"]
margin_top = 153.0
margin_right = 140.0
margin_bottom = 192.0
text = "Resume"

[node name="Spacer3" type="Control" parent="CenteredInFullScreenPanel/VBoxContainer"]
margin_left = 240.0
margin_top = 412.0
margin_right = 240.0
margin_bottom = 480.0
size_flags_horizontal = 4
size_flags_vertical = 3
[connection signal="pressed" from="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer/ExitLevelButton" to="." method="_on_ExitLevelButton_pressed"]
[connection signal="pressed" from="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenteredInFullScreenPanel/VBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
